assets/sass/_media.scss
// Breakpoints
$extra-extra-large: 1400px;
$medium-large: 1300px;
$extra-large: 1024px;
$large: 992px;
$medium: 768px;
$small: 576px;
$x-small: 420px;

@media screen and (max-width: $extra-extra-large) {
  .container {
    padding-left: 16px !important;
    padding-right: 16px !important;
  }
  .title-h1,
  .title-h2 {
    font-size: 58px;
  }
  .descr {
    &--large {
      font-size: 25px;
    }
  }
  .text {
    font-size: 16px;
  }
  .system {
    &__title {
      max-width: 100%;
    }
    &__container {
      justify-content: space-between;
    }
    &__text {
      &--left {
        max-width: 40%;
      }
      &--right {
        max-width: 55%;
      }
    }
    &__row {
      &--text {
        gap: unset;
        justify-content: space-between;
      }
    }
    &__column {
      &--left {
        max-width: 25%;
      }
      &--right {
        max-width: 70%;
      }
    }
  }
  .discovery {
    &__title {
      font-size: 120px;
      align-items: baseline;
      justify-content: unset;
      gap: 90px;
    }
  }
}

@media screen and (max-width: $medium-large) {
  .system {
    $self: &;
    &__image {
      position: static;
      max-width: 100%;
    }
    &__row {
      &--information {
        flex-direction: column;
        gap: 30px;
      }
    }
    &__information {
      &--right {
        max-width: unset;
      }
      &-list {
        &:not(:last-child) {
          margin-bottom: 35px;
        }
      }
      &-card {
        max-width: 100%;
        flex-direction: row;
        align-items: flex-start;
        gap: 20px;
        padding: 16px;
      }
    }
    &__container {
      &:nth-child(2) {
        #{$self}__column {
          &--left {
            justify-content: center;
          }
        }
      }
    }
  }
  .discovery {
    &__title {
      font-size: 90px;
      &--strong {
        line-height: 75px;
        padding: 7px 30px 15px 30px;
      }
    }
    &__information {
      margin-top: 75px;
      flex-direction: column;
      align-items: flex-start;
      gap: 50px;
    }
    &__text {
      max-width: 45%;
    }
    &__descr {
      max-width: 55%;
    }
  }
}

@media screen and (max-width: $extra-large) {
  :root {
    --section-offset: 90px;
  }
  .modal {
    &__body {
      max-width: 80%;
    }
  }
  .site-container {
    overflow: hidden;
  }
  .header {
    &__nav {
      display: none;
    }
    &__button {
      display: none;
    }
    &__burger {
      display: flex;
    }
  }
  .menu {
    display: flex;
  }
  .hero {
    &__information {
      max-width: 75%;
    }
    &__bottom {
      flex-direction: column-reverse;
      gap: 30px;
    }
  }
  .cell {
    &__slides {
      position: relative !important;
      z-index: 1;
      transition: height 0.3s ease-in-out;
      &-item {
        position: absolute;
        top: 0;
        left: 0;
        display: flex;
        flex-direction: column;
        align-items: flex-start;
        gap: 25px;
        opacity: 0;
        z-index: -1;
        transition: unset;
        &.active {
          // opacity: 1;
          z-index: 10;
        }
      }
      &-controls {
        display: none;
      }
    }
    &__descr {
      &:last-child {
        padding-bottom: unset;
      }
    }
    &__button {
      align-self: flex-start;
    }
  }
  .system {
    $self: &;
    min-height: unset;
    gap: 50px;
    &__container {
      &:nth-child(1) {
        flex-direction: column;
        gap: 32px;
        #{$self}__column {
          &--left {
            flex-direction: column-reverse;
            gap: 32px;
            max-width: 100%;
          }
          &--right {
            max-width: 100%;
            #{$self}__row {
              &--text {
                flex-direction: column;
                gap: 16px;
              }
            }
          }
        }
      }
    }
    &__text {
      &--left,
      &--right {
        max-width: 100%;
      }
    }
  }
  .advantages {
    $self: &;
    &__title {
      font-size: 100px;
    }
    &__link {
      display: none;
    }
    &__button {
      display: inline-block;
    }
    &__slider {
      &-controls {
        &--mobile {
          display: flex;
        }
        &--desktop {
          display: none;
        }
      }
    }
  }
  .discovery {
    &__title {
      font-size: 64px;
      letter-spacing: -1.8px;
      gap: 50px;
      &--strong {
        line-height: 65px;
        padding: 0px 30px 5px 30px;
      }
    }
  }
  .applications {
    &__title {
      font-size: 38px !important;
      font-style: normal;
      font-weight: 400;
      line-height: 100% !important; /* 38px */
      letter-spacing: -1.52px !important;
    }
    &__controls {
      gap: 6px;
      &-button {
        width: 38px;
        height: 38px;
        svg {
          min-width: 14px;
          max-width: 14px;
        }
      }
    }
  }
  .footer {
    &__partners {
      &--desktop {
        padding: 18px 34px;
        justify-content: space-between;
        gap: unset;
      }
    }
  }
}
/* ... */

